--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 .App {
   text-align: center;
   font-family: 'Press Start 2P', cursive;
-  background: linear-gradient(145deg, #ff9966, #ff5e62);
+  background: linear-gradient(135deg, #6a11cb, #2575fc);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -15,13 +15,13 @@
 
 h1 {
   font-size: 1.8em;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   color: #ffd700;
 }
 
 p {
   font-size: 1.2em;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   color: #ffd700;
 }
 
@@ -35,15 +35,18 @@ button {
   background-color: #222;
   border: 2px solid #ffd700;
   color: white;
-  padding: 10px 20px;
+  padding: 15px 20px;
   text-align: center;
   font-size: 1.2em;
-  margin: 10px 0;
-  border-radius: 8px;
+  margin: 15px 0;
+  border-radius: 10px;
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
-  width: 80%; /* Make buttons full width */
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 button:hover {
@@ -53,7 +56,7 @@ button:hover {
 }
 
 h3 {
-  margin-top: 15px;
+  margin-top: 20px;
   font-size: 1.5em;
   color: #FFD700;
 }
@@ -69,6 +72,7 @@ h3 {
 
   button {
     font-size: 1em;
+    padding: 12px 20px;
   }
 
   h3 {
