--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,8 @@ button {
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
-  width: 80%;
+  width: 90%; /* Increased button width */
+  max-width: 400px; /* Optional max-width for larger screens */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -62,6 +63,7 @@ button {
   position: relative;
   z-index: 0;
   overflow: hidden;
+  font-family: 'Press Start 2P', cursive; /* Changed font */
 }
 
 button:before {
