--- a/src/App.css
+++ b/src/App.css
@@ -24,12 +24,7 @@ body, html {
 h1 {
   font-size: 2.5em;
   margin-bottom: 20px;
-  background: linear-gradient(270deg, #ff0047, #ff8a00, #fcdc4d, #28e0ae, #0044ff);
-  background-size: 800% 800%;
-  color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
-  animation: gradientMove 10s ease infinite; /* Moving gradient animation */
+  color: #ffd700;
   text-shadow: 2px 2px 4px #000; /* Add a shadow to make the text pop */
 }
 
@@ -52,13 +47,14 @@ button {
   color: white;
   padding: 15px 20px;
   text-align: center;
-  font-size: 1.2em; /* Smaller font size */
+  font-size: 1em;
   margin: 15px 0;
   border-radius: 15px;
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
-  width: 90%; /* Increased width */
+  width: 90%; /* Increased button width */
+  max-width: 400px; /* Optional max-width for larger screens */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -67,6 +63,7 @@ button {
   position: relative;
   z-index: 0;
   overflow: hidden;
+  font-family: 'Press Start 2P', cursive; /* Changed font */
 }
 
 button:before {
@@ -109,7 +106,7 @@ h3 {
   }
 
   button {
-    font-size: 1em;
+    font-size: 1.2em;
     padding: 12px 20px;
   }
 
@@ -127,10 +124,4 @@ h3 {
 @keyframes shine {
   0% { transform: translate(-100%, -100%) rotate(45deg); }
   100% { transform: translate(100%, 100%) rotate(45deg); }
-}
-
-@keyframes gradientMove {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
 }
