--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@ body, html {
   font-family: 'VT323', monospace;
   overflow: hidden;
   position: relative;
+  display: flex;
+  justify-content: flex-start; /* Align the content to the left */
 }
 
 body:before {
@@ -43,13 +45,13 @@ body:before {
 }
 
 .App {
-  text-align: center;
+  text-align: left; /* Align text to the left */
   font-family: 'VT323', monospace; 
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start; /* Align items to the left */
   color: #fff;
   padding: 10px;
   position: relative;
@@ -97,7 +99,7 @@ body:before {
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
   animation: gradientShift 2s infinite;
   font-family: 'Press Start 2P', cursive;
-  width: 60px; /* Set a fixed width for buttons */
+  width: 120px;
 }
 
 .room-list {
@@ -113,14 +115,15 @@ body:before {
   align-items: center;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 10px;
-  padding: 10px;
-  margin-bottom: 10px;
+  padding: 5px; /* Reduce padding to minimize gaps */
+  margin-bottom: 5px; /* Reduce margin between room cards */
   text-align: left;
   flex-direction: row;
 }
 
 .room-details {
   flex: 1;
+  line-height: 1.2em; /* Reduce line height to minimize gaps between text */
 }
 
 .join-button {
@@ -163,7 +166,7 @@ body:before {
 @media (max-width: 480px) {
   .container {
     padding: 15px;
-    max-width: 90%; /* Allow the container to fill the width on mobile */
+    max-width: 100%;
   }
 
   .welcome-message {
@@ -172,16 +175,16 @@ body:before {
   }
 
   .header-row {
-    flex-direction: row; /* Ensure buttons are side by side on mobile */
+    flex-direction: row;
     justify-content: space-between;
-    max-width: 100%; /* Adjust the width to fit mobile screens */
+    max-width: 100%;
   }
 
   .create-button, .refresh-button {
     font-size: 0.8em;
     padding: 8px 12px;
     margin: 5px 0;
-    width: 15%; /* Reduce width for side-by-side display */
+    width: 48%;
   }
 
   .room-card {
